# eYSIP-2017_Evaluating_Blackline_Robot

./: M_camcal.py  README.md  config_img.xml  config_vid.xml
Black line following algorithm(Straight line)/Circular window (Tested on straight line)/: CircleSearch.m  CircleWindow.m  Ideal_test.txt  Practical_test.txt  main.m
Black line following algorithm(Straight line)/assuming sorted test file/: Event.m  FileOperationWrite.m  Ideal.txt  Search.m
Black line following algorithm/Circular window (Tested on straight line)/: CircleWindow.m  FileOperationWrite.m  File_write_test.m  Main Algorithm.m  Search.m
Black line following algorithm/assuming sorted test file/: FileOperationRead.m  Practical.txt
Camera Calibration Toolbox for Matlab - Arena(Red Patch)/TOOLBOX_calib/: calib_gui_normal.m  click_ima_calib_MOD.m  extract_grid.m  mosaic.m  my3Dcal2.m
Camera Calibration Toolbox for Matlab - Arena/TOOLBOX_calib/: click_ima_calib.m  ext_calib2.m
Camera Calibration Toolbox for Matlab - Arena/calib_example/: calib_data.mat  (+2 more)
Documented code/: Readme.txt
Documented code/indoor_loc/: CMakeLists.txt  calculate_extrinsic.cpp  calculate_world_coordinate.cpp  calculate_world_coordinate.h  calibrate_camera_v1.0.cpp  detect_bot_marker.cpp  utility_functions.cpp
Documented code/indoor_loc/config_folder/: configuration_calibration.xml
Final/: Idealsort.m  test.m
Final(csv file)/: 1.txt  2.txt  3.txt  5.txt  Ideal_test_1.txt  Readme.txt  Weigh.m  test.txt
Final(txt file)/: 4.txt  GenId.m  Ideal_test4.txt
M_camcal_python/: M_camcal.py  config_img.xml  config_vid.xml
(+98 files in other folders)
